@@ -25,11 +25,10 @@
         <spring.version>3.2.1.RELEASE</spring.version>
         <spring-security.version>3.0.7.RELEASE</spring-security.version>
 		<hibernate.version>4.1.9.Final</hibernate.version>
-<!--         <hibernate.version>3.4.0-SNAPSHOT</hibernate.version> -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <unitils.version>3.3</unitils.version>
+        <lucene.version>3.6.2</lucene.version>
         <!-- OLD: <lucene.version>2.9.4</lucene.version> --><!-- lucene.version in hibernate-search 3.4.0-SNAPSHOT is 2.4.0-->
-        <lucene.version>3.6.2</lucene.version><!-- lucene.version in hibernate-search 3.4.0-SNAPSHOT is 2.4.0-->
         
         
         <hsqldb.version>1.8.0.10</hsqldb.version><!-- 1.8.0.10, 1.9.0-rc6 (manualy build only for debugging) -->
@@ -236,7 +235,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx600M</argLine>
+                    <argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
                     <runOrder>alphabetical</runOrder>
 					<includes>
                         <include>**/*Test.java</include>
@@ -615,7 +614,7 @@
             <dependency>
                 <groupId>javax.xml.bind</groupId>
                 <artifactId>jaxb-api</artifactId>
-                <version>2.1.6</version>
+                <version>2.2.7</version>
             </dependency>
             <dependency>
                 <groupId>xml-resolver</groupId>
@@ -630,17 +629,17 @@
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-impl</artifactId>
-                <version>2.1.6</version>
+                <version>2.2-EA</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb1-impl</artifactId>
-                <version>2.1.6</version>
+                <version>2.2-EA</version>
             </dependency>
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-xjc</artifactId>
-                <version>2.1.6</version>
+                <version>2.2-EA</version>
             </dependency>
             <!-- ******* hibernate uses slf4j ******* -->
             <dependency>
@@ -1099,11 +1098,11 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <dependency>
-                <groupId>javassist</groupId>
-                <artifactId>javassist</artifactId>
-                <version>3.12.1.GA</version>
-            </dependency>
+			<dependency>
+				<groupId>org.javassist</groupId>
+				<artifactId>javassist</artifactId>
+				<version>3.17.1-GA</version>
+			</dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-cglib-repack</artifactId>
